# email-wallet-core-contract

./: .gitignore  Cargo.toml  README.md
artifacts/: account_handler.wasm  checksums.txt  email_wallet_core.wasm  relayer_handler.wasm  verifier.wasm
contracts/email_wallet_core/: Cargo.toml
contracts/email_wallet_core/src/: contract.rs  msg.rs  state.rs
contracts/handler/account_handler/: Cargo.toml
contracts/handler/account_handler/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/handler/relayer_handler/: Cargo.toml
contracts/handler/relayer_handler/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/verifier/: Cargo.toml
contracts/verifier/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  types.rs  utils.rs
contracts/verifier/src/tasks/: create_account.rs  mod.rs
script/: config.json  store_contracts.py
